refine intro and model

--- a/writing/_cogsci2016/habituals-cogsci2016.bib
+++ b/writing/_cogsci2016/habituals-cogsci2016.bib
@@ -76,6 +76,19 @@
   pages = {445-484}
 }
 
+@article{Gelman1999,
+  author = {Gelman, Susan A. and Heyman, Gail D.},
+  issn = {0956-7976},
+  journal = {Psychological Science},
+  mendeley-groups = {habituals},
+  number = {6},
+  pages = {489--493},
+  pmid = {3353035938803346926},
+  title = {{Carrot-Eaters and Creature-Believers: The Effects of Lexicalization on Children's Inferences About Social Categories}},
+  volume = {10},
+  year = {1999}
+}
+
 
 @inbook{Goodman2015a, 
   author = {Goodman, Noah D. and Lassiter, Daniel}, 
@@ -148,6 +161,38 @@
   publisher = {Cambridge University Press},
   year      = 2014,
   address   = {Cambridge}
+}
+
+
+@article{Repacholi1997,
+  abstract = {Although there is substantial evidence that 30-month-old children can reason about other people's desires, little is known about the developmental antecedents of this ability. A food-request procedure was devised to explore this understanding in 14- and 18-month-olds. Children observed an experimenter expressing disgust as she tasted 1 type of food and happiness as she lasted another type of food. They were then required to predict which food the experimenter would subsequently desire. The 14-month-olds responded egocentrically, offering whichever food they themselves preferred. However, 18-month-olds correctly inferred that the experimenter wanted the food associated with her prior positive affect. They were able to make this inference even when the experimenter's desires differed from their own. These data constitute the first empirical evidence that 18-month-olds are able to engage in some form of desire reasoning. Children not only inferred that another person held a desire, but also recognized how desires are related to emotions and understood something about the subjectivity of these desires.},
+  author = {Repacholi, Betty M. and Gopnik, Alison},
+  doi = {10.1037/0012-1649.33.1.12},
+  file = {:Users/mht/Documents/Mendeley Desktop/Repacholi, Gopnik/1997/Repacholi, Gopnik - 1997 - Early reasoning about desires evidence from 14- and 18-month-olds.pdf:pdf},
+  isbn = {0012-1649},
+  issn = {0012-1649},
+  journal = {Developmental psychology},
+  keywords = {Child Psychology,Choice Behavior,Concept Formation,Emotions,Female,Food Preferences,Humans,Infant,Male,Motivation,Social Perception,Taste},
+  mendeley-groups = {habituals},
+  number = {1},
+  pages = {12--21},
+  pmid = {9050386},
+  title = {{Early reasoning about desires: evidence from 14- and 18-month-olds.}},
+  url = {http://www.ncbi.nlm.nih.gov/pubmed/9050386},
+  volume = {33},
+  year = {1997}
+}
+
+
+@article{Seiver2013,
+  author = {Seiver, Elizabeth and Gopnik, Alison and Goodman, Noah D.},
+  journal = {Child Development},
+  number = {2},
+  pages = {443--454},
+  pmid = {23002946},
+  title = {{Did She Jump Because She Was the Big Sister or Because the Trampoline Was Safe? Causal Inference and the Development of Social Attribution}},
+  volume = {84},
+  year = {2013}
 }
 
 
