--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -241,27 +241,23 @@ The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habit
 
 On each trial of the experiment, the participant was told a person did a particular action 3 times during some time window. 
 Figure \ref{fig:tjScatters} (left) shows the correspondence between the time window given and the felicity of the corresponding habitual sentence. 
-According to our theory that the meaning is a threshold of frequency of action, habitual sentences express minimally that a person \emph{has done} an action a number of times in the past. 
-We see that none of our items receive less than 25\% endorsement (i.e. 75\% of participants disagree with the felicity of the utterance).
-This may be due to the fact that actor has done the action in the past; we would expect to get strong disagreement with the utterance (endorsement = 0\%) when the person has never done the action, or done it only once.
-
-As a baseline hypothesis, we see how the frequency of action predicts the felicity of a habitual sentence (e.g. how often John runs to predict the felicity of the sentence \emph{John runs}.). 
 It is clear that a habitual sentence can receive strong agreement even when the actions are very infrequent (log time interval $>$ 4; time interval of subsequent actions years or more; e.g. writing 3 novels, stealing 3 cars in a 5 year interval).
 We also see habitual sentences that participants are reluctant to endorse completely (e.g. wears socks, drinks coffee), even when they are relatively frequent in occurrence (spec. 3 times in a one month interval).
-In our data, actions that are completed multiple times in a very short interval (spec, 3 times in a one week interval) receive at least 75\% endorsement, though there is still variability among them (e.g. smoking cigarettes, wearing socks are endorsed the least), suggesting that even actions that are completed almost everyday.
-
-
-
+In our data, actions that are completed multiple times in a very short interval (spec, 3 times in a one week interval) receive at least 75\% endorsement, though there is still variability among them (e.g. smoking cigarettes, wearing socks are endorsed the least), suggesting that even actions that are completed almost everyday can be not good enough to generalize.
 Overall, the time interval predicts only a fraction of the variability in responses ($r^2(93) = 0.33$).
 For actions that are done on the time scale of years or more (upper median of time interval), time interval itself no longer explains the endorsements  ($r^2(50) = 0.07$)
 
+We notice that none of our items receive less than 25\% endorsement (i.e. only 75\% of participants disagree with the felicity of the utterance).
+This may be due to the fact that actor has done the action in the past a plurality of times; we would expect to get strong disagreement with the utterance (endorsement = 0\%) when the person has never done the action, or perhaps done it only once.
 
 \subsection{Model fit and results}
 
-We used the posterior predictive of the prior data (Expt.~1a) as  $P(x)$  in Eq.~\ref{eq:S2} to predict felicity judgments in Expt.~1b.
+We used the pragmatic speaker model $S_2$ (Eq.~\ref{eq:S2}) with the posterior predictive of the prior data (Expt.~1) as $P(x)$  to predict felicity judgments in Expt.~2.
 We modeled $P(x)$ as a mixture of individuals with the possibility of carrying out the action and those without the possibility of doing it. 
-The mixture component $\theta$ was determined by the frequency of people who had done the action before (Expt.~1a; Question 1, $d_1$). 
-For those with the possibility of doing it, the frequency with which they carried out the action was modeled by a log-normal distribution, with parameters learned from the responses to Question 2. 
+The posterior predictive of the prior data was constructed by forward-sampling the mixture component $\theta$ (determined by Q1: number of people who had done the action before, see Expt.~1 data analysis).
+If the sampled person was the kind of person to have done the action before, the frequency was sampled a likely frequency of action (determined by Q2). 
+If they were not the type of person to have done the action, we assume they will never or only rarely do it
+\footnote{These assumptions, while probably valid if a learner knows nothing else about the person, will be challenged in Expt.~3}.
 
 \begin{minipage}{0.5 \textwidth} \small
 \begin{align*}
@@ -279,10 +275,10 @@ We use Bayesian data analytic techniques to integrate out these parameters \cite
 
 To attain credible values of the model parameters as well as the posterior predictive distribution over responses, we collected 3 MCMC chains of 30,000 iterations, discarding the first 15,000 iterations of each chain for burn in.
 The Maximum A-Posteriori (MAP) value and 95\% highest probability density (HPD) interval for the speaker optimality parameter in Eq.~\ref{eq:S1} is 4.7 [3.7,5.2].
-The MAP and HPD interval for the data-analytic guessing parameter is 0.004 [0.0003, 0.03], suggesting that there is not a substantial amount of the data that is better explained by a model of random guessing than by the pragmatic speaker model.
-
+The MAP and HPD interval for the data-analytic guessing parameter is 0.004 [0.0003, 0.03], suggesting that there is not a substantial amount of the data that is better explained by a model of random guessing than by our pragmatic speaker model.
 
 The probabilistic pragmatics model does a better job of accounting for the variability in responses ($r^2(93) = 0.89$), including actions done on the time scale of years or more  ($r^2(50) = 0.89$) (Figure \ref{fig:tjScatters} right).
+This is strong evidence that generic language and habitual language share a common representation; the exact same language predicts truth conditions for both of them.
 
 
 \section{Experiment 3: Time and subjective frequency}
