clean up beginning of expt 3

--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -278,40 +278,45 @@ The Maximum A-Posteriori (MAP) value and 95\% highest probability density (HPD) 
 The MAP and HPD interval for the data-analytic guessing parameter is 0.004 [0.0003, 0.03], suggesting that there is not a substantial amount of the data that is better explained by a model of random guessing than by our pragmatic speaker model.
 
 The probabilistic pragmatics model does a better job of accounting for the variability in responses ($r^2(93) = 0.89$), including actions done on the time scale of years or more  ($r^2(50) = 0.89$) (Figure \ref{fig:tjScatters} right).
-This is strong evidence that generic language and habitual language share a common representation; the exact same language predicts truth conditions for both of them.
-
+The model designed to describe generic language (e.g. \emph{Swans are white.}) can describe habitual language (e.g. \emph{John smokes.}) equally as well by specifying the underlying degree as the frequency with which an individuals performs an action.
+This provides a formal bridge between generalizations of properties about categories (i.e. \emph{generics}) and generalizations about individuals or events (i.e. \emph{habituals}), a connection often noted in the linguistics literature \cite{Carlson1977, Carlson2005, Cohen1999}. 
 
 \section{Experiment 3: Time and subjective frequency}
 
-In Expt.~1 \& 2, we saw how a model designed to describe generic language (e.g. \emph{Swans are white.}) can describe habitual language (e.g. \emph{John smokes}) equally as well by specifying the underlying degree as the frequency with which an individuals performs an action.
-This provides a formal bridge between generalizations of properties about categories (i.e. \emph{generics}) and generalizations about individuals or events (i.e. \emph{habituals}), a connection often noted in the linguistics literature \cite{Carlson1977, Carlson2005, Cohen1999}. 
-
-Unlike natural kinds, however, individuals can modify their behaviors overnight.  
-In Expt.~3, we explore how knowledge of certain causal factors (e.g. the decision to retire; breaking one's leg) interacts with the frequency of action to modulate the veracity of habitual sentences (e.g. \emph{John writes novels.}; \emph{John runs.}).
-
-These results suggest the underlying scale for habituals is \emph{predictive} frequency of action, and that habituals are used to talk about future predictions of people's actions.
+People change in a way that natural kinds cannot: People can modify their behavior overnight.
+Yet, there is an ambiguity in the frequency degree semantics over which the pragmatic theory operates.
+In some sense, one can only know \emph{past frequency} of action because that is all that has occurred.
+On the other hand, language has a communicative function, and only \emph{predictive frequency} will be helpful in the future.
+In Expt.~3, we explore how knowledge of certain causal factors (e.g. the decision to retire; the development of an allergy) interacts with the past frequency of action to modulate the felicity of habitual sentences (e.g. \emph{John writes novels.}; \emph{John eats peanut butter.}).
 
 \subsection{Method}
 
 \subsubsection{Participants} 
 
-We recruited \red{N} participants from MTurk.
-The experiment took \red{N} minutes on average on participants were compensated \$\red{N} for their work.
+We recruited \red{150?} participants from MTurk, using the same criterion as Expt.~2.
+The experiment took \red{m} minutes on average on participants were compensated \$\red{d} for their work.
 
-\subsubsection{Procedure and materials}
+\subsubsection{Procedure}
 
-The procedure was identical to Expt.~1b except for the inclusion of additional information on a subset of trials. 
-On one third of the trials, participants were presented with \textbf{preventative conditions} (e.g. \emph{Yesterday, Bill decided to quit smoking.} that aimed to decrease the acceptability of the habitual sentence (\emph{Bill smokes}) even in the face of strong past frequency evidence (\emph{Last week, Bill smoked 3 times.}).
-On one third of the trials, participants were presented with \textbf{enabling conditions} that were the same for all items (\emph{Yesterday, Bill remembered how much that was and made a plan to do it more in the future}) that aimed to increase the acceptability of the habitual sentence when the past frequency evidence was not strong. 
+The procedure was identical to Expt.~1b except for the inclusion of a second sentence on a subset of trials. 
+On one third of the trials, participants were presented with a \textbf{preventative condition} (e.g. \emph{Yesterday, Bill quit smoking.} that aimed to decrease the acceptability of the habitual sentence (\emph{Bill smokes}) even in the face of strong past frequency evidence (\emph{Last week, Bill smoked 3 times.}).
+On one third of the trials, participants were presented with an \textbf{enabling condition} that sought to reinforce the past frequency (\emph{Yesterday, Bill bought a pack of cigarettes.}) that aimed to increase the acceptability of the habitual sentence when the past frequency evidence was not strong. 
 The final third of trials had no additional evidence and were identical to Expt.~1b. 
+
+\subsubsection{Materials}
+
+Twenty-one of the original thirty-one items were used to shorten the experiment.
+To increase expected variability, participants saw only the frequencies that led to the maximal and minimal endorsements of the habitual. 
+In addition, we did not include trials for both male and female names for the select items we did in Expt.~1b, since we saw no differences in their endorsements of the habitual.
+This brings our total number of unique trials to 21 items x 2 frequency levels = 42, for each of 3 conditions.
 The dependent measure was the same as in Expt.~1b. 
 The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habituals/experiments/truth-judgments/tj-3-preventative.html}.
 
-
 \subsection{Behavioral results}
 
-\subsection{Model results}
+Our results suggest the underlying scale for habituals is \emph{predictive} frequency of action, and that habituals are used to talk about future predictions of people's actions.
 
+\subsection{Model results}
 
 
 \section{Discussion}
